# OMRChecker

./: Dockerfile  pyproject.toml  scripts.sh
exams/20223112/inputs/: template.json
exams/20223112/outputs/Manual/: ErrorFiles.csv
exams/20223112/outputs/Results/: Results_02AM.csv
