[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37']

[tool.poetry]
name = "omrchecker"
version = "0.1.0"
description = ""
authors = ["Lukáš Hejtmánek <hejtmy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
deepmerge = "^1.1.0"
dotmap = "^1.3.30"
jsonschema = "^4.17.3"
rich = "^13.3.5"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
